# criba

./: .pre-commit-config.yaml  README.md  bugs.md  cli.py  criba.py  output_schema.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.py  tool.py
.github/workflows/: ci.yml
tests/: make_sample_pdf.py  test_cli.py  test_criba.py
